--- a/css/stats.css
+++ b/css/stats.css
@@ -1,8 +1,17 @@
 .img {
-  width: 30%;
-  height: auto;
+  width: auto;
 }
 
-.card-group a {
+.card-group:hover {
   text-decoration: none;
+}
+
+.header {
+ font-size: 30px;
+ color: #FFFFFF;
+ border: 1px dashed orange;
+ position: fixed;
+ height: 150px;
+ width: 100%;
+ text-align: center;
 }
