--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,11 @@ header {
 }
 
 .sticky-top{
+  width: 100vw;
   font-size: 40px;
   color: white;
   border: 1px solid #AAAAAA;
   height: 75px;
-  max-width:auto;
   text-align: center;
   margin: 0 auto;
   position:sticky;
@@ -51,7 +51,9 @@ footer{
   width: 40px;
   height: 40px;
 }
-
+#retiro{
+  width: 40%
+}
 #images{
   height:160px!important;
   width:270px!important;
@@ -59,9 +61,6 @@ footer{
 
 #heading {
   text-decoration: none;
-}
-nav{
-  width: 100vw;
 }
 .this-me{
   width:100vw;
