--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ img {
 .bg-light > a {
   text-decoration: none;
 }
+.cp-hd a{
+  text-decoration: none;
+  color: white;
+
+}
 .cp-hd{
   margin:9px;
 }
@@ -47,6 +52,15 @@ footer{
 #linkedin {
   position:absolute;
   right: 50px;
+  top:16px;
+  width: 40px;
+  height: 40px;
+}
+
+#homeicon{
+  background-color:#202020;
+  position:absolute;
+  left: 50px;
   top:16px;
   width: 40px;
   height: 40px;
